--- a/voom-app/app/src/main/res/layout/fragment_ride_history.xml
+++ b/voom-app/app/src/main/res/layout/fragment_ride_history.xml
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="No scheduled rides found yet"
+                android:text="No rides found yet"
                 android:textSize="18sp"
                 android:visibility="visible" />
         </FrameLayout>
